src/test/ui/macros/issue-88206.stderr
error: cannot find macro `test` in this scope
  --> $DIR/issue-88206.rs:57:5
   |
LL |     test!();
   |     ^^^^
   |
   = note: `test` is in scope, but it is an attribute

error: cannot find macro `Copy` in this scope
  --> $DIR/issue-88206.rs:53:5
   |
LL |     Copy!();
   |     ^^^^
   |
   = note: `Copy` is in scope, but it is a derive macro

error: cannot find macro `Box` in this scope
  --> $DIR/issue-88206.rs:49:5
   |
LL |     Box!();
   |     ^^^
   |
   = note: `Box` is in scope, but it is not a macro

error: cannot find macro `from_utf8` in this scope
  --> $DIR/issue-88206.rs:46:5
   |
LL |     from_utf8!();
   |     ^^^^^^^^^
   |
note: `from_utf8` is imported here, but it is not a macro
  --> $DIR/issue-88206.rs:5:5
   |
LL | use std::str::*;
   |     ^^^^^^^^^^^

error: cannot find attribute `println` in this scope
  --> $DIR/issue-88206.rs:40:3
   |
LL | #[println]
   |   ^^^^^^^
   |
   = note: `println` is in scope, but it is a function-like macro

error: cannot find attribute `from_utf8_unchecked` in this scope
  --> $DIR/issue-88206.rs:36:3
   |
LL | #[from_utf8_unchecked]
   |   ^^^^^^^^^^^^^^^^^^^
   |
note: `from_utf8_unchecked` is imported here, but it is not an attribute
  --> $DIR/issue-88206.rs:5:5
   |
LL | use std::str::*;
   |     ^^^^^^^^^^^

error: cannot find attribute `Deserialize` in this scope
  --> $DIR/issue-88206.rs:32:3
   |
LL | #[Deserialize]
   |   ^^^^^^^^^^^
   |
note: `Deserialize` is imported here, but it is not an attribute
  --> $DIR/issue-88206.rs:15:22
   |
LL | use hey::{Serialize, Deserialize};
   |                      ^^^^^^^^^^^

error: cannot find derive macro `println` in this scope
  --> $DIR/issue-88206.rs:27:10
   |
LL | #[derive(println)]
   |          ^^^^^^^
   |
   = note: `println` is in scope, but it is a function-like macro

error: cannot find derive macro `from_utf8_mut` in this scope
  --> $DIR/issue-88206.rs:23:10
   |
LL | #[derive(from_utf8_mut)]
   |          ^^^^^^^^^^^^^
   |
note: `from_utf8_mut` is imported here, but it is not a derive macro
  --> $DIR/issue-88206.rs:5:5
   |
LL | use std::str::*;
   |     ^^^^^^^^^^^

error: cannot find derive macro `Serialize` in this scope
  --> $DIR/issue-88206.rs:19:10
   |
LL | #[derive(Serialize)]
   |          ^^^^^^^^^
   |
note: `Serialize` is imported here, but it is not a derive macro
  --> $DIR/issue-88206.rs:15:11
   |
LL | use hey::{Serialize, Deserialize};
   |           ^^^^^^^^^

error: aborting due to 10 previous errors

